// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary for no expenses correctly 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totaling
     
    $2.35
  </h3>
</div>
`;

exports[`should render ExpensesSummary for one expense correctly 1`] = `
<div>
  <h3>
    Viewing 
    23
     
    expenses
     totaling
     
    $15,200.02
  </h3>
</div>
`;
